maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:18: error: not found: value takeBaggle
  takeBaggle()
  ^