maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  var a = random3()
  do{
    a = random3()
    if (a == 1 && !isFacingWall()) {
      forward()
    }
    else if (a == 2){
      right()
    }
    else {
      left()
    }
    
  }while (isOverBaggle() == false)
  takeBaggle()
}